--- a/.tmp/app/app.css
+++ b/.tmp/app/app.css
@@ -6799,6 +6799,10 @@ button.close {
   color: #000;
   padding: 0.2em 0; }
 
+#defaultCanvas {
+  position: absolute;
+  top: 0; }
+
 .thing-form {
   margin: 20px 0; }
 
