--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -15,6 +15,11 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
     padding: 0.2em 0;
 }
 
+#defaultCanvas {
+	position: absolute;
+	top: 0;
+}
+
 // Component styles are injected through grunt
 // injector
 @import 'main/main.scss';
